--- a/src/LanguageButton.css
+++ b/src/LanguageButton.css
@@ -1,12 +1,20 @@
 .LanguageButton {
   background-color: transparent;
   outline: none;
-  border: 2px solid pink;
-  border-radius: 10px;
   text-transform: uppercase;
-  font-size: 1rem;
+  font-size: .5rem;
+  border: none;
+  color: white;
 }
 
 img {
-  width: 80px;
+  width: 30px;
+}
+
+p {
+  margin: 0;
+}
+
+.active {
+  border: 1px solid yellow;
 }
