Add new flag images to languages.js and LanguageOption component; add style to flags

--- a/src/Form.css
+++ b/src/Form.css
@@ -5,7 +5,7 @@
   width: 50%;
 }
 
-.Form input {
+.Form textarea {
   height: 150px;
   width: 100%;
   background-color: yellow;
@@ -16,3 +16,5 @@
   text-align: center;
   border: none;
 }
+
+
