Format speech bubbles; adjust margin on .ui-grid to prevent screen overflow

--- a/src/LanguageOption.css
+++ b/src/LanguageOption.css
@@ -3,9 +3,17 @@
   align-items: center;
 }
 
+.LanguageOption span {
+  display: inline-block;
+}
+
 .LanguageOption-dropdownOption {
   padding: 0 0 8px 15px;
+  display: flex;
+  align-items: center;
 }
+
+
 
 .LanguageOption-flag {
   width: 30px;
