--- a/src/Form.css
+++ b/src/Form.css
@@ -2,19 +2,33 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 50%;
+  padding: 15px;
+  margin: 1em 0 3em;
+  color: #000;
+  background: #f3961c;
+  border-radius: 10px;
+  background: linear-gradient(top, #f9d835, #f3961c);
+  width: 40%;
+  height: 150px;
+  position: relative;
+  z-index: 2;
 }
 
 .Form textarea {
-  height: 150px;
-  width: 100%;
-  background-color: yellow;
-  border-radius: 15px;
-  font-size: 1rem;
-  padding: 10px;
-  overflow: auto;
-  text-align: center;
-  border: none;
+  width:100%;
+  height: 100px;
+  z-index: 1;
 }
 
-
+.Form:before {
+  content: "";
+  display: block; /* reduce the damage in FF3.0 */
+  position: absolute;
+  top: 40%;
+  left: -30px;
+  width: 0;
+  border-width:  35px 35px 0;
+  border-style: solid;
+  border-color: #f3961c transparent;
+  z-index: -1;
+}
