--- a/src/Translator.css
+++ b/src/Translator.css
@@ -1,7 +1,10 @@
 .Translator {
   display: flex;
   flex-flow: column;
-  height: 98vh;
+  height: 100vh;
+  max-width: 100vw;
+  border: 3px solid orange;
+  font-family: 'Livvic', sans-serif;
 }
 
 /*============================================================*/
@@ -12,8 +15,9 @@
   padding-top: 15px; 
   padding-bottom: 15px;
   text-align: center; 
-  background-color: rgb(56, 3, 56);
+  background-color: rgb(117, 2, 117);
   color: white;
+  /* max-width: 100vw; */
 }
 
 /*============================================================*/
@@ -22,24 +26,25 @@
 
 .ui.grid {
   margin-top: 0;
-  margin-bottom: -1rem;
-  margin-left: -1rem;
-  margin-right: -1rem;
+  margin-bottom: 0rem;
+  margin-left: 0rem;
+  margin-right: 1rem;
+  width: 100%;
 }
 
 .Translator-texts{
   background-color: #DDDDDD;
   flex-grow : 1;
+  background-image: url('./background4.png');
+  background-size: cover;
+  border: 3px solid orange;
+  width: 100%;
 }
 
 /*============================================================*/
 /************************** COLUMNS ***************************/
 /*============================================================*/
 
-.Translator-column {
-  background-color: rgb(121, 7, 167);
-  
-}
 
 /* this styles the .Translator-column; 
 need to include this selector to override specificity 
@@ -52,11 +57,12 @@ of the semantic-ui package */
 .Translator-column-inner {
   width: 90%;
   display: flex;
+  padding: 0 15px;
   justify-content: space-between;
   align-items: center;
-  background-color: lavender;
+  background-color: rgb(12, 170, 190);
   border-radius: 15px;
-  box-shadow: 2px 2px 12px rgb(236, 241, 236);
+  /* box-shadow: 2px 2px 12px rgb(236, 241, 236); */
 }
 
 /*============================================================*/
@@ -71,7 +77,7 @@ of the semantic-ui package */
 
 .Translator-speechBlurb,
 .Translator-speechBlurb-initial {
-  width: 50%;
+  /* width: 50%;
   height: 150px;
   background-color: yellow;
   border-radius: 15px;
@@ -79,5 +85,26 @@ of the semantic-ui package */
   padding: 10px;
   overflow: auto;
   text-align: center;
+  position: relative; */
+  position: relative;
+  padding: 15px;
+  margin: 1em 0 3em;
+  color: #000;
+  background: #f3961c;
+  border-radius: 10px;
+  background: linear-gradient(top, #f9d835, #f3961c);
+  width: 40%;
+  height: 150px;
 }
 
+.Translator-speechBlurb:after {
+  content: "";
+  display: block; /* reduce the damage in FF3.0 */
+  position: absolute;
+  top: 40%;
+  right: -30px;
+  width: 0;
+  border-width:  35px 35px 0;
+  border-style: solid;
+  border-color: #00c291 transparent;
+}
