--- a/src/Form.css
+++ b/src/Form.css
@@ -2,20 +2,23 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  text-align: center;
   padding: 15px;
   margin: 1em 0 3em;
   color: #000;
   background: #f3961c;
   border-radius: 10px;
-  background: linear-gradient(top, #f9d835, #f3961c);
-  width: 40%;
+  background: white;
+  width: 50%;
   height: 150px;
   position: relative;
   z-index: 2;
 }
 
 .Form textarea {
-  width:100%;
+  width: 100%;
+  text-align: center;
   height: 100px;
   z-index: 1;
 }
@@ -29,6 +32,6 @@
   width: 0;
   border-width:  35px 35px 0;
   border-style: solid;
-  border-color: #f3961c transparent;
+  border-color: #ffffff transparent;
   z-index: -1;
 }
