--- a/src/Form.css
+++ b/src/Form.css
@@ -5,7 +5,7 @@
   justify-content: center;
   text-align: center;
   padding: 15px;
-  margin: 1em 0 3em;
+  /* margin: 1em 0 3em; */
   color: #000;
   background: #f3961c;
   border-radius: 10px;
