--- a/src/Form.css
+++ b/src/Form.css
@@ -5,25 +5,30 @@
   justify-content: center;
   text-align: center;
   padding: 15px;
-  /* margin: 1em 0 3em; */
   color: #000;
   background: #f3961c;
   border-radius: 10px;
   background: white;
   width: 50%;
-  height: 150px;
+  height: 70%;
   position: relative;
   z-index: 2;
+}
+
+form {
+  width: 100%;
+  height: 100%;
 }
 
 .Form textarea {
   width: 100%;
   text-align: center;
-  height: 100px;
+  height: 85%;
   z-index: 1;
+  border: 1px solid red;
 }
 
-.Form:before {
+.Form:after {
   content: "";
   display: block; /* reduce the damage in FF3.0 */
   position: absolute;
@@ -34,4 +39,21 @@
   border-style: solid;
   border-color: #ffffff transparent;
   z-index: -1;
+}
+
+@media (min-width: 768px) {
+  
+
+  .Form {
+    width: 95%;
+    height: 250px;
+  }
+
+
+  .Form:after {
+    top: -35px;
+    left: 70%; 
+    border-width:  0 25px 35px ; 
+  }
+
 }
