--- a/src/Translator.css
+++ b/src/Translator.css
@@ -58,8 +58,8 @@ of the semantic-ui package */
   padding: 0 25px;
   justify-content: space-between;
   align-items: center;
-  /* background-color: rgba(193, 238, 241, 0.95); */
-  background-image: url("./background6.png");
+  background-color: rgba(193, 238, 241, 0.95);
+  /* background-image: url("./background6.png"); */
   background-size: cover;
 /* box-shadow: 4px 4px 10px rgb(230, 208, 224); */
   border-radius: 75px;
@@ -122,6 +122,7 @@ of the semantic-ui package */
    /* border: 1px solid red;  */
    justify-content: center;
    padding: 25px 15px;
+   margin: 35px 0; 
   }
 
   .Translator-speechBlurb {
@@ -146,7 +147,7 @@ of the semantic-ui package */
 
   .Translator-speechBlurb:after {
     top: 100%; 
-    left: 15%; 
+    left: 25%; 
     border-width: 35px 25px 0; 
   }
 }
