--- a/src/Form.css
+++ b/src/Form.css
@@ -9,8 +9,8 @@
   background: #f3961c;
   border-radius: 30px;
   background: white;
-  width: 50%;
-  height: 70%;
+  width: 55%;
+  height: 120px;
   position: relative;
   z-index: 2;
 }
@@ -18,21 +18,28 @@
 form {
   width: 100%;
   height: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .Form textarea {
   width: 100%;
   text-align: center;
-  display: flex;
-  align-items: center;
-  height: 85%;
+  height: 80%; 
+  margin-bottom: 15px;
   z-index: 1;
-  /* border: 1px solid red; */
+  overflow-x: hidden;
+  border: none;
+  resize: none;
+  outline: none;
 }
 
 .Form:after {
   content: "";
-  display: block; /* reduce the damage in FF3.0 */
+  display: block; 
   position: absolute;
   top: 40%;
   left: -30px;
@@ -43,24 +50,45 @@ form {
   z-index: -1;
 }
 
-@media (min-width: 768px) {
-  
+.Form button {
+  background-color: rgba(202, 17, 171, 0.938);
+  border: none;
+  color: white;
+  text-transform: uppercase;
+  padding: 5px 10px;
+  border-radius: 5px;
+  outline: none;
+}
 
+/*====================================*/
+/*********** MEDIA QUERIES ************/
+/*====================================*/
+
+@media (min-width: 400px) {
+  .Form {
+    height: 150px;
+  }
+}
+
+@media (min-width: 768px) {
   .Form {
     width: 95%;
     height: 250px;
     border-radius: 70px;
   }
-
   .Form textarea {
-    border-radius: 70px;
+    height: 70%;
   }
-
-
   .Form:after {
     top: -35px;
     left: 60%; 
     border-width:  0 25px 35px ; 
   }
+}
 
+@media (max-width: 767px) and (min-height: 800px) and (max-height: 820px) {
+  .Form {
+    align-self: flex-end;
+    width: 65%;
+  }
 }
