--- a/src/Translator.css
+++ b/src/Translator.css
@@ -1,27 +1,29 @@
 .Translator {
   display: flex;
   flex-flow: column;
-  height: 100vh;
+  min-height: 100vh;
   max-width: 100vw;
-  /* border: 3px solid orange; */
-  font-family: 'Livvic', sans-serif;
 }
 
-/*============================================================*/
-/******************** HEADER AND DROPDOWN *********************/
-/*============================================================*/
+/*====================================*/
+/******** HEADER AND DROPDOWN *********/
+/*====================================*/
 
 .Translator-languageSelector {
-  padding-top: 15px; 
-  padding-bottom: 15px;
+  padding: 15px 0; 
   text-align: center; 
   background-color: rgba(190, 32, 138, 0.89);
   color: white;
 }
 
-/*============================================================*/
-/********************* TRANSLATION TEXTS **********************/
-/*============================================================*/
+.Translator-languageSelector h1 {
+  font-family: 'Livvic';
+  font-size: 2.5rem;
+}
+
+/*====================================*/
+/********* TRANSLATION TEXTS **********/
+/*====================================*/
 
 .ui.grid {
   margin-top: 0;
@@ -31,17 +33,14 @@
   width: 100%;
 }
 
-.Translator-texts{
+.Translator-texts {
   background-color: rgb(31, 30, 30);
   flex-grow : 1;
-  background-size: cover;
-  /* border: 3px solid orange; */
-  width: 100%;
 }
 
-/*============================================================*/
-/************************** COLUMNS ***************************/
-/*============================================================*/
+/*====================================*/
+/************** COLUMNS ***************/
+/*====================================*/
 
 
 /* this styles the .Translator-column; 
@@ -55,20 +54,18 @@ of the semantic-ui package */
 .Translator-column-inner {
   width: 90%;
   display: flex;
-  padding: 0 25px;
+  padding: 0 10px;
   justify-content: space-between;
   align-items: center;
   background-color: rgba(193, 238, 241, 0.95);
-  /* background-image: url("./background6.png"); */
   background-size: cover;
-/* box-shadow: 4px 4px 10px rgb(230, 208, 224); */
-  border-radius: 75px;
-  /* box-shadow: 2px 2px 12px rgb(236, 241, 236); */
+  min-height: 150px;
+
 }
 
-/*============================================================*/
-/************************ AVATAR IMAGE *************************/
-/*============================================================*/
+/*====================================*/
+/************ AVATAR IMAGE ************/
+/*====================================*/
 
 .Translator-avatar {
   width: 30%;
@@ -76,34 +73,39 @@ of the semantic-ui package */
   align-self: center;
 }
 
-/*============================================================*/
-/*********************** SPEECH BUBBLE ************************/
-/*============================================================*/
+/*====================================*/
+/*********** SPEECH BUBBLE ************/
+/*====================================*/
 
 .Translator-speechBlurb {
-  
   position: relative;
   padding: 15px;
-  /* margin: 1em 0 3em; */
   color: #000;
-  background: #f3961c;
   border-radius: 30px;
   background: white;
-  width: 50%;
-  height: 70%;
+  width: 55%;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   z-index: 1;
 }
 
-/* set the z-index to 2 so that text doesn't hide behind the speech bubble's triangle */
+/* set the z-index to 2 so that 
+text doesn't hide behind 
+the speech bubble's triangle */
 .Translator-speechBlurb > p {
   z-index: 2;
   position: relative;
   text-align: center;
+  height: 80%;
+  overflow: auto;
+ 
 }
 
 .Translator-speechBlurb:after {
   content: "";
-  display: block; /* reduce the damage in FF3.0 */
+  display: block; 
   position: absolute;
   top: 40%;
   right: -30px;
@@ -114,40 +116,81 @@ of the semantic-ui package */
   z-index: -1;
 }
 
+/*====================================*/
+/*********** MEDIA QUERIES ************/
+/*====================================*/
 
+@media (min-width: 400px) {
+  .Translator-speechBlurb {
+    height: 150px;
+  }
+  .Translator-column-inner {
+    padding: 0 15px;
+  }
+}
 
 @media (min-width: 768px) {
+  .Translator-languageSelector {
+    padding: 25px 0;   
+  }
+  .Translator-languageSelector h1 {
+    font-size: 3.5rem;
+  }
+  .ui.stackable.grid {
+    padding: 10px 0;
+  }
   .Translator-column-inner {
     flex-direction: column;
-   /* border: 1px solid red;  */
-   justify-content: center;
-   padding: 25px 15px;
-   margin: 35px 0; 
-  }
+    justify-content: center;
+    padding: 25px 15px;
 
+  }
   .Translator-speechBlurb {
     width: 95%;
     height: 250px;
     border-radius: 70px;
   }
-
   .Translator-avatar {
-    width: 50%;
+    width: 60%;
   }
-  
   .Translator-avatar-input {
     align-self: flex-start;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
   }
-
   .Translator-avatar-response {
     align-self: flex-end;
-    margin-top: 30px;
+    margin-top: 50px;
   }
-
   .Translator-speechBlurb:after {
     top: 100%; 
     left: 25%; 
     border-width: 35px 25px 0; 
+  }
+}
+
+@media (max-width: 767px) and (min-height: 800px) and (max-height: 820px) {
+  .Translator-column-inner {
+    flex-direction: column;
+    justify-content: center;
+    padding: 20px 15px;
+  }
+  .Translator-avatar-input {
+    align-self: flex-start;
+    width: 40%; 
+    margin-bottom: 15px;
+  }
+  .Translator-avatar-response {
+    align-self: flex-end;
+    width: 40%;
+  }
+  .Translator-speechBlurb {
+    width: 65%;
+    align-self: flex-start;
+  }
+}
+
+@media (min-width: 768px) and (min-height: 1100px) {
+  .Translator-avatar {
+    width: 80%;
   }
 }
