--- a/src/Form.css
+++ b/src/Form.css
@@ -26,9 +26,10 @@ form {
 }
 
 .Form textarea {
-  width: 100%;
+  font-family: 'Raleway', sans-serif;
+  width: 95%;
   text-align: center;
-  height: 80%; 
+  height: 75%; 
   margin-bottom: 15px;
   z-index: 1;
   overflow-x: hidden;
@@ -51,13 +52,14 @@ form {
 }
 
 .Form button {
-  background-color: rgba(202, 17, 171, 0.938);
+  background-color: #00c9ff;
   border: none;
   color: white;
   text-transform: uppercase;
   padding: 5px 10px;
   border-radius: 5px;
   outline: none;
+  font-size: .5rem;
 }
 
 /*====================================*/
@@ -70,10 +72,19 @@ form {
   }
 }
 
+@media (min-width: 600px) {
+  .Form textarea {
+    font-size: 1.25rem;
+  }
+  .Form button {
+    font-size: 1rem;
+  }
+}
+
 @media (min-width: 768px) {
   .Form {
     width: 95%;
-    height: 250px;
+    height: 220px;
     border-radius: 70px;
   }
   .Form textarea {
